src/App.module.css
html {
  font-family: arial;
}

#wrapper {
  position: relative;
}
body {
  background-size: 40px 40px;
  background-image:
    linear-gradient(to right, rgba(0, 0, 0, 0.2) 1px, transparent 1px),
    linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 1px, transparent 1px);
}

.landingFG {
  z-index: 100;
}

.landingBG {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -100;
}

.circle {
  height: 0;
  width: 0;
  box-shadow: 0 0 128px 100px slategray;
}

html {
  height: 100%;
}
body {
  min-height: 100%;
}

